@@ -3127,14 +3127,12 @@
   <block id="a34ba0327bb6f5e052aa4d47c9024cd7" category="section-title">Configurazioni che supportano il tiering dei dati</block>
   <block id="aac3150f303991246792d1b76e543f1f" category="paragraph">È possibile abilitare il tiering dei dati quando si utilizzano configurazioni e funzionalità specifiche.</block>
   <block id="ec4c1907e0b1b3ab9bfe34d9898d0723" category="section-title">Supporto in AWS</block>
-  <block id="9a546a1baaebd3e2af69af4e1f807ea9" category="list-text">Il tiering dei dati è supportato in AWS a partire da Cloud Volumes ONTAP 9.2.</block>
   <block id="049a56718afb4bc754cebf8a5567c3c8" category="section-title">Supporto in Azure</block>
   <block id="f16872b2bf28c8dcda252e8197cc1a5e" category="list-text">Il tiering dei dati è supportato in Azure come segue:</block>
   <block id="c7f6ec5d95cafd0132e2322cbdca7f47" category="list-text">Versione 9.4 in con sistemi a nodo singolo</block>
   <block id="146aae59b5e422bc518402fc01301883" category="list-text">Versione 9.6 in con coppie ha</block>
   <block id="c22e6c8e140bb405c574c67bff9bd946" category="list-text">Il Tier di performance può essere costituito da dischi gestiti da SSD Premium, dischi gestiti da SSD Standard o dischi gestiti da HDD Standard.</block>
   <block id="783e44882ef395447a1b422181ebb3d4" category="section-title">Supporto in Google Cloud</block>
-  <block id="c0a92ff7cf6e8a1570f1775a4a7c563d" category="list-text">Il tiering dei dati è supportato in Google Cloud a partire da Cloud Volumes ONTAP 9.6.</block>
   <block id="0285440088a9a63b47028bcc1bccb076" category="section-title">Interoperabilità delle funzionalità</block>
   <block id="c1b52ad9b725f31f29df47c75d8f2bdd" category="list-text">Il tiering dei dati è supportato dalle tecnologie di crittografia.</block>
   <block id="957637726d55a9a54b3163fb3c7e8f1b" category="list-text">Il thin provisioning deve essere attivato sui volumi.</block>
@@ -3226,7 +3224,6 @@
   <block id="1948af9c9d5426628760bb0ef4a35cdf" category="inline-link">NetApp Volume Encryption (NVE) e NetApp aggregate Encryption (NAE)</block>
   <block id="0bf3330853877ab4b76b4f1e00d3ace2" category="list-text">NVE crittografa i dati inattivi un volume alla volta. Ogni volume di dati dispone di una chiave di crittografia univoca.</block>
   <block id="988d5e992ea371904581e6f8ad13bac7" category="list-text">NAE è un'estensione di NVE, che crittografa i dati per ogni volume e i volumi condividono una chiave nell'aggregato. NAE consente inoltre di deduplicare i blocchi comuni di tutti i volumi dell'aggregato.</block>
-  <block id="e1bf87c98edd3bee07d170ae8b118aeb" category="paragraph">I nuovi aggregati hanno NetApp aggregate Encryption (NAE) abilitato per impostazione predefinita dopo aver configurato un gestore di chiavi esterno. I nuovi volumi che non fanno parte di un aggregato NAE avranno NetApp Volume Encryption (NVE) abilitato per impostazione predefinita (ad esempio, se si dispone di aggregati creati prima di impostare un gestore di chiavi esterno).</block>
   <block id="d200c22f00ca54467dc4ad3823710388" category="inline-link">AWS Key Management Service (KMS)</block>
   <block id="60fa85f272e116effea35da2e9f082ca" category="paragraph">Quando si avvia un sistema Cloud Volumes ONTAP in AWS, è possibile attivare la crittografia dei dati utilizzando<block ref="8fc3b96c90d2dea9ee9936bb213df75b" category="inline-link-rx"></block>. BlueXP richiede le chiavi dati utilizzando una chiave master del cliente (CMK).</block>
   <block id="6eb233d9be32984c99508cdbee911e24" category="inline-link-macro">Scopri come configurare Cloud Volumes ONTAP per utilizzare una chiave gestita dal cliente in Azure</block>
@@ -3946,7 +3943,6 @@ Fare clic su *Add Subscription* (Aggiungi abbonamento) per associare le credenzi
   <block id="4c1dfec10f54a14c066eb4fde624e32b" category="paragraph"><block ref="4c1dfec10f54a14c066eb4fde624e32b" category="inline-link-rx"></block></block>
   <block id="de6c35943505135e58a4af4389b1768d" category="list-text"><block ref="de6c35943505135e58a4af4389b1768d" category="inline-link-rx"></block></block>
   <block id="9ae78035ef81aaff6187ef9a11cd1f03" category="list-text"><block ref="9ae78035ef81aaff6187ef9a11cd1f03" category="inline-link-rx"></block></block>
-  <block id="08922f23ed9079ed0750935efad792c1" category="admonition">Cerchi informazioni sul connettore?<block ref="a05739e7bce05bd7a830b46920675255" category="inline-link-rx"></block></block>
   <block id="081496cbc3abd2aa45670e7415b9b307" category="list-text"><block ref="081496cbc3abd2aa45670e7415b9b307" category="inline-link-rx"></block></block>
   <block id="72a0c1f7935cbaab164295a8fac378d8" category="list-text"><block ref="72a0c1f7935cbaab164295a8fac378d8" category="inline-link-rx"></block></block>
   <block id="509259be6d5e15d8959f705cbe0cbcc1" category="paragraph"><block ref="509259be6d5e15d8959f705cbe0cbcc1" category="inline-image-macro-rx" type="image"></block></block>
@@ -4342,7 +4338,6 @@ Fare clic su *Add Subscription* (Aggiungi abbonamento) per associare le credenzi
   <block id="b9f4aa39433f5232d4ce50f2a9a3c403" category="list-text">L64s_v3</block>
   <block id="e4b60b51b40a0907e38b3293d36780e6" category="inline-link-macro">Configurazioni supportate in Azure</block>
   <block id="22342037237200e034fd29c9cfd5bfd4" category="paragraph"><block ref="22342037237200e034fd29c9cfd5bfd4" category="inline-link-macro-rx"></block></block>
-  <block id="eb4c08b87f805a62e5af64a0b7c6fb5a" category="paragraph">BlueXP crea gruppi di sicurezza Azure che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte a scopo di test o se si preferisce utilizzare i propri gruppi di protezione.</block>
   <block id="9864c286612d20c437e06d1612a86f2d" category="summary">BlueXP crea gruppi di sicurezza AWS che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte a scopo di test o se si preferisce utilizzare i propri gruppi di protezione.</block>
   <block id="87ade7583253b06f01182c970d65aacd" category="paragraph">BlueXP crea regole di Google Cloud Firewall che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte per scopi di test o se si preferisce utilizzare le proprie regole firewall.</block>
   <block id="bab89553328d9045a17e6cd7ae426ebe" category="paragraph">La configurazione di ARP per i volumi viene eseguita tramite Gestore di sistema di ONTAP e CLI di ONTAP.</block>
@@ -4755,7 +4750,6 @@ Massimizza l'efficienza. Visualizza le metriche di efficienza dello storage e id
   <block id="9a06593a786548bb3b7320df7c76e7f1" category="paragraph">La scheda K8s era obsoleta in una versione precedente ed è stata rimossa.</block>
   <block id="526b16be728da42dd3eb25f5c378e218" category="list-text">NAE non può essere usato con AKV. NAE richiede un server KMIP supportato dall'esterno.</block>
   <block id="70004026f1ac6c7f08784ebf0a55c142" category="list-text">I nodi Cloud Volumes ONTAP eseguono il polling di AKV ogni 15 minuti per verificare l'accessibilità e la disponibilità delle chiavi. Questo periodo di polling non è configurabile e, dopo quattro errori consecutivi nel tentativo di polling (per un totale di 1 ora), i volumi vengono messi offline.</block>
-  <block id="368b5e8e02b8134e8d1009fff74bf2bc" category="paragraph">Cloud Volumes ONTAP supporta<block ref="09aecd5417a289ba24f2f00949971fbc" category="inline-link-rx"></block>. NVE e NAE sono soluzioni basate su software che consentono la crittografia dei volumi (data-at-rest) conforme a FIPS 140-2. Sia NVE che NAE utilizzano la crittografia AES a 256 bit.</block>
   <block id="f21def4319b19574f5ca7ab45389822b" category="paragraph">+ si noti che il pacchetto ottimizzato non è disponibile con BYOL.</block>
   <block id="e2299e8e355a9b503858d1f8d800ccaa" category="paragraph">Per il pacchetto Essentials, il costo minimo di capacità di 4 TIB non si applica alle VM di storage che contengono solo volumi secondari (data Protection). Ad esempio, se si dispone di una VM di storage con 1 TIB di dati secondari, viene addebitato solo il costo di 1 TIB di dati. Con tutti gli altri tipi di pacchetti non Essentials (Optimized e Professional), la capacità di ricarica minima di 4 TiB si applica indipendentemente dal tipo di volume.</block>
   <block id="ea4ba4158f6b2b895b0418072f2ba06d" category="paragraph">La licenza basata su nodo è il modello di licenza di generazione precedente che consente di concedere in licenza Cloud Volumes ONTAP per nodo. Questo modello di licenza non è disponibile per i nuovi clienti. La carica per nodo è stata sostituita con i metodi di carica per capacità descritti in precedenza.</block>
@@ -5243,7 +5237,6 @@ Massimizza l'efficienza. Visualizza le metriche di efficienza dello storage e id
   <block id="c97a482803062120aadcb028bb25c6d1" category="paragraph">I dati Cloud Volumes ONTAP vengono crittografati automaticamente in Azure utilizzando<block ref="840493a517ea59018e3217960e80e550" category="inline-link-rx"></block>. L'implementazione predefinita utilizza una chiave gestita da Microsoft. Non è richiesta alcuna configurazione.</block>
   <block id="1f86b1e4048d088ce153a6f451fb30d6" category="section-title">9 dicembre 2024</block>
   <block id="c02b5fa56aae4296da253938ec788b53" category="paragraph">I dati vengono automaticamente crittografati in Cloud Volumes ONTAP in Azure utilizzando una chiave gestita da<block ref="840493a517ea59018e3217960e80e550" category="inline-link-rx"></block> Microsoft. Tuttavia, ora è possibile utilizzare la propria chiave di crittografia gestita dal cliente completando i seguenti passaggi:</block>
-  <block id="a12f9b162c1d705866995451c3607b7a" category="paragraph">ifdef::azure[] endif::azure[] ifdef::gcp[] endif::gcp[]</block>
   <block id="2da8645e38c3d4f73ccf32db700949e1" category="inline-link">KB: Quali funzionalità di efficienza dello storage inline sono supportate in CVO?</block>
   <block id="d3f3737cc08ede35a7833c219be7cf96" category="paragraph">A partire dalla versione BlueXP 3.9.5, il reporting dello spazio logico viene attivato sulla VM di storage iniziale. Quando lo spazio viene segnalato logicamente, ONTAP riporta lo spazio del volume in modo che tutto lo spazio fisico salvato dalle funzionalità di efficienza dello storage venga riportato come utilizzato. Per informazioni sulle funzionalità di efficienza dello storage inline, consultare l'articolo della Knowledge base<block ref="9af56c326a803ff09c4af3da1cdbc4e2" category="inline-link-rx"></block></block>
   <block id="2036e42877d5092c3afda2b202817932" category="list-text">NFS ifdef::aws[] endif::aws[] ifdef::aura[] endif::aura[]</block>
@@ -5850,4 +5843,26 @@ Massimizza l'efficienza. Visualizza le metriche di efficienza dello storage e id
   <block id="5dc4c869682b55bd825dbd766c5a91c6" category="inline-link-macro">Collegamenti privati di Azure disattivati</block>
   <block id="56942c64ec21bc5186a25c20b4c9231e" category="list-text">È necessario <block ref="d1486d850c17a7ded1dee71bca015a76" category="inline-link-macro-rx"></block>utilizzare l'endpoint del servizio di sottorete.</block>
   <block id="e48502083eb8949c8f65b2ccddd5adec" category="section-title">12 maggio 2025</block>
+  <block id="389d4c98e2d0499c2e4e750430434afb" category="doc">Implementazioni in modalità privata abilitate per Cloud Volumes ONTAP 9.15.1</block>
+  <block id="bce4906e9d915e525cd382b520b71325" category="paragraph">Ora puoi implementare Cloud Volumes ONTAP 9.15.1 in modalità privata in AWS, Azure e Google Cloud. La modalità privata è abilitata per implementazioni a nodo singolo e high Availability (ha) di Cloud Volumes ONTAP 9.15.1.</block>
+  <block id="8d85a6720847d90489976db4cc2c4e48" category="paragraph">Cloud Volumes ONTAP supporta<block ref="09aecd5417a289ba24f2f00949971fbc" category="inline-link-rx"></block>. NVE e NAE sono soluzioni basate su software che consentono la crittografia dei dati a riposo dei volumi conforme allo standard FIPS 140-2. Sia NVE che NAE utilizzano la crittografia AES a 256 bit.</block>
+  <block id="3d9f78a1ff8b79063296498224874e6c" category="paragraph">Cloud Volumes ONTAP supporta sia NVE che NAE con servizi di gestione delle chiavi esterni (EKM) forniti da AWS, Azure e Google Cloud, incluse soluzioni di terze parti come Fortanix. A differenza di ONTAP, per Cloud Volumes ONTAP le chiavi di crittografia vengono generate dal provider cloud, non in ONTAP.</block>
+  <block id="918d32b75f0ab883abba3a8dc0c3ae8d" category="inline-link">Tool di matrice di interoperabilità</block>
+  <block id="fc018227cf021b5cfd4d7696a41f346a" category="paragraph">Cloud Volumes ONTAP utilizza i servizi standard KMIP (Key Management Interoperability Protocol) utilizzati da ONTAP. Per ulteriori informazioni sui servizi supportati, fare riferimento a <block ref="728e4ee339d5763542973002d2a82dc7" category="inline-link-rx"></block> .</block>
+  <block id="37368004332f325820087f73466f8e6c" category="paragraph">Se utilizzi NVE, hai la possibilità di utilizzare il key vault del tuo provider cloud per proteggere le chiavi di crittografia ONTAP:</block>
+  <block id="35b16ddf568bd70f42e0bcb19f2a533c" category="list-text">Azure Key Vault (AKV)</block>
+  <block id="f0daa22edb6ee8b88bae0e5a21b552ec" category="list-text">Servizio di gestione delle chiavi Google Cloud</block>
+  <block id="81f72afb3ba5f2e16cf373b5ea887aec" category="paragraph">I nuovi aggregati hanno NetApp aggregate Encryption (NAE) abilitato per impostazione predefinita dopo aver configurato un gestore di chiavi esterno. Nei nuovi volumi che non fanno parte di un aggregato NAE, NVE è abilitato per impostazione predefinita (ad esempio, se sono presenti aggregati esistenti creati prima di configurare un gestore chiavi esterno).</block>
+  <block id="9d7d08ead80432c8e527b130cf457a7d" category="paragraph">BlueXP crea gruppi di sicurezza di Azure che includono le regole in ingresso e in uscita affinché Cloud Volumes ONTAP funzioni correttamente. <block ref="a05739e7bce05bd7a830b46920675255" category="inline-link-rx"></block> .</block>
+  <block id="52fa9133415c22fe3227f02c5bdc7bdb" category="inline-link">Informazioni sulle porte interne di ONTAP</block>
+  <block id="72cb359256f1b923869ffe5643075163" category="paragraph">I gruppi di sicurezza di Azure per Cloud Volumes ONTAP richiedono che le porte appropriate siano aperte per la comunicazione interna tra i nodi. <block ref="9235b6a724dccf5c41be51f4736123ae" category="inline-link-rx"></block> .</block>
+  <block id="e3f7f3a3bb47d39a7fd58de8d5070b2b" category="paragraph">Si sconsiglia di modificare i gruppi di sicurezza predefiniti o di utilizzare gruppi di sicurezza personalizzati. Tuttavia, se necessario, si noti che il processo di distribuzione richiede che il sistema Cloud Volumes ONTAP abbia accesso completo alla propria subnet. Al termine della distribuzione, se si decide di modificare il gruppo di sicurezza di rete, assicurarsi di mantenere aperte le porte del cluster e le porte di rete HA. Ciò garantisce una comunicazione fluida all'interno del cluster Cloud Volumes ONTAP (comunicazione any-to-any tra i nodi).</block>
+  <block id="552d4863308abc19f380cc04022d6ad3" category="admonition">La sorgente è l'interfaccia (indirizzo IP) del sistema Cloud Volumes ONTAP.</block>
+  <block id="8dbd909e72408c020853ce0f323f1faa" category="list-text">La suddivisione in livelli dei dati è supportata in AWS a partire da Cloud Volumes ONTAP 9.2.</block>
+  <block id="bb76865f22c7023c27866da2d50e30b0" category="admonition">Si sconsiglia di suddividere i dati in livelli per l'archiviazione di oggetti quando si utilizzano HDD Throughput Optimized (st1).</block>
+  <block id="0baa9fabb663d0426d677bdef48cab76" category="list-text">I dati inattivi vengono suddivisi in bucket Amazon S3. Il suddivisione in bucket di altri provider non è supportata.</block>
+  <block id="9d04d4aae5bc77b320eddf498e3e1a4c" category="list-text">I dati inattivi sono suddivisi in livelli in Microsoft Azure Blob. Il suddivisione in livelli in altri provider non è supportata.</block>
+  <block id="4fa4358b6bad8118578db6b5c02a52db" category="list-text">La suddivisione in livelli dei dati è supportata in Google Cloud a partire da Cloud Volumes ONTAP 9.6.</block>
+  <block id="bae7cc0d7e8eb757103bffb3f43417c4" category="list-text">I dati inattivi sono gestiti tramite livelli di Google Cloud Storage. Il livello di altri provider non è supportato.</block>
+  <block id="1971cba9fca6bc598cf10a08dfb20cb6" category="section-title">29 maggio 2025</block>
 </blocks>
