@@ -212,12 +212,11 @@ BlueXP presenta problemi di connessione se si tenta di implementare una seconda 
 
 === Regole del gruppo di sicurezza
 
-BlueXP crea gruppi di sicurezza Azure che includono le regole in entrata e in uscita di cui Cloud Volumes ONTAP ha bisogno per funzionare correttamente. Si consiglia di fare riferimento alle porte a scopo di test o se si preferisce utilizzare i propri gruppi di protezione.
+BlueXP crea gruppi di sicurezza di Azure che includono le regole in ingresso e in uscita affinché Cloud Volumes ONTAP funzioni correttamente.  https://docs.netapp.com/us-en/bluexp-setup-admin/reference-ports-azure.html["Visualizzare le regole del gruppo di protezione per il connettore"^] .
 
-Il gruppo di sicurezza per Cloud Volumes ONTAP richiede regole sia in entrata che in uscita.
+I gruppi di sicurezza di Azure per Cloud Volumes ONTAP richiedono che le porte appropriate siano aperte per la comunicazione interna tra i nodi.  https://docs.netapp.com/us-en/ontap/networking/ontap_internal_ports.html["Informazioni sulle porte interne di ONTAP"^] .
 
-
-TIP: Cerchi informazioni sul connettore? https://docs.netapp.com/us-en/bluexp-setup-admin/reference-ports-azure.html["Visualizzare le regole del gruppo di protezione per il connettore"^]
+Si sconsiglia di modificare i gruppi di sicurezza predefiniti o di utilizzare gruppi di sicurezza personalizzati. Tuttavia, se necessario, si noti che il processo di distribuzione richiede che il sistema Cloud Volumes ONTAP abbia accesso completo alla propria subnet. Al termine della distribuzione, se si decide di modificare il gruppo di sicurezza di rete, assicurarsi di mantenere aperte le porte del cluster e le porte di rete HA. Ciò garantisce una comunicazione fluida all'interno del cluster Cloud Volumes ONTAP (comunicazione any-to-any tra i nodi).
 
 
 
